# shiny-python-statsignif

./: README.md  app.py  pyproject.toml  requirements.txt
dev/: dev.py
docs/: app.json
shiny_app/: app.py
