[project]
name = "shiny-python-statsignif"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "anywidget>=0.9.13",
    "htmltools>=0.6.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.16.0",
    "scipy>=1.14.1",
    "shiny>=1.2.1",
    "shinylive>=0.7.1",
    "shinyswatch>=0.8.0",
    "shinywidgets>=0.3.4",
]
